--- a/config/config.yml
+++ b/config/config.yml
@@ -1,4 +1,41 @@
 idioma: Castellano
+logging:
+  formatters:
+    debug_formatter:
+      format: '[%(asctime)s][%(levelname)s][%(name)s][%(module)s|%(lineno)s]. %(message)s'
+      datefmt: "%Y-%m-%d %H:%M:%S"
+    default_formatter:
+      format: '[%(asctime)s].%(levelname)s. %(message)s'
+      datefmt: "%Y-%m-%d %H:%M:%S"
+  handlers:
+    console_handler:
+      class: logging.StreamHandler
+      formatter: debug_formatter
+      level: DEBUG
+      stream: ext://sys.stdout
+    error_handler:
+      class: logging.FileHandler
+      filename: error.log
+      formatter: debug_formatter
+      level: ERROR
+      mode: w
+    file_handler:
+      class: logging.FileHandler
+      filename: output.log
+      formatter: default_formatter
+      level: INFO
+  loggers:
+    root:
+      handlers:
+      - file_handler
+      - console_handler
+      level: INFO
+    error_logger:
+      handlers:
+        - error_handler
+        - console_handler
+      level: CRITICAL
+  version: 1
 path_ffmpeg: D:/Formacion/ffmpeg-6.1-essentials_build/bin
 path_sw: C:\Users\Goyo\audio_extractor
 path_sw_out: C:\Users\Goyo\audio_extractor\out
